--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,6 +10,9 @@
 
 *{
     color: white;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -19,7 +22,6 @@ body{
 h1{
     font-size: 309.34px;
     font-family: 'Playfair Display';
-    margin: 0;
     align-self: center;
 }
 
@@ -29,16 +31,28 @@ h2{
 }
 
 .portfolio-container{
-    align-self: center;
+    padding-top: 212px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.columns{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 74px;
+}
+
+.column1, .column2{
+    display: flex;
+    flex-direction: column;
+    gap: 85px;
 }
 
 h3{
     font-size: 44.75px;
-}
-
-button{
-    background-color: white;
-    color: black;
 }
 
 .quote{
@@ -53,12 +67,18 @@ button{
     border: 1px solid white;
 }
 
+header{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 24px;
+    padding-top: 20px;
+}
+
 nav{
-    width: 1.139px;
     font-size: 20px;
     gap: 500px;
-    margin-top: 79.79px;
-    margin-left: 65px;
     display: inline-flex;
 }
 
@@ -68,20 +88,42 @@ nav{
     margin-right: 104px;
 }
 
-header{
-    width: 100%;
+main{
+    width: 100vw;
     position: relative;
     font-size: 24px;
     align-items: center;
+    top: 500px;
     gap: 22px;
-    margin-top: 100px;
+    top: 50px;
+}
+
+main button{
+    background-color: white;
+    color: black;
+}
+
+.button{
+    padding-top: 120px;
+    padding-left: 240px;
 }
 
 .paragraph{
+    padding-top: 25px;
+    padding-left: 40px;
     width: 678px;
-    padding-left: 65px;
-    padding-top: 149.6px;
-    margin: 0;
+    padding-bottom: 30px;
+}
+
+.title {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.title h1{
+    text-align: center;
+    line-height: 215px;
 }
 
 .commets{
@@ -102,12 +144,43 @@ header{
     bottom: 0;
 }
 
+.about-container{
+    padding-top: 340px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 70px;
+}
+
 .about-img{
-    display: inline-flex;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 71px;
-    margin-left: 50px;
+
 }
 
 .about{
-    width: 550px;
+    width: 650px;
+    display: flex;
+    flex-direction: column;
+    font-size: 40px;
+    gap: 30px;
+}
+
+.testimonials-container{
+    padding-top: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+    
+.testimonials-container button{
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    font-size: 24px;
+    width: 220px;
+    height: 77px;
 }
